--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="/assets/styles/style.css" />
   </head>
   <body>
+    <div>
+      <span>F</span><span>ancy Fi</span><span>r</span><span>eworks</span>
+    </div>
     <article>
-      <h1>Fancy Fireworks</h1>
       <div>
         <label>
           <input type="checkbox" name="dayNightMode" value="yes"/>
@@ -32,6 +34,8 @@
           <input type="radio" name="effect" />
           <label for="effect3"></label>
         </li>
+        <input type="checkbox" name="close-menu" id="close-menu"/>
+        <label for="close-menu">X</label>
       </ul>
     </section>
     <section>
