--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div>
         <input type="checkbox" id="launchFireworkBtn" name="shootFirework" />
-        <label for="launchFireworkBtn">Launch!</label>
+        <label for="launchFireworkBtn"></label>
       </div>
     </section>
     <section>
